wired all together, Action to UserControl messaging is probably a bit "wonky" as you may put it.

--- a/src/WPF.Shared/UserControls/DelayingTextInputControl.xaml
+++ b/src/WPF.Shared/UserControls/DelayingTextInputControl.xaml
@@ -10,9 +10,9 @@
              d:DesignHeight="25" d:DesignWidth="150">
     <Grid>
         <AdornerDecorator>
-            <TextBox x:Name="TbSearchText" Text="{Binding Hint, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=UserControl}}" >
+            <TextBox x:Name="TbSearchText" Text="{Binding Text, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=UserControl}}" >
                 <AttachedProperties:PlaceholderService.Placeholder>
-                    <TextBlock>Hint</TextBlock>
+                    <TextBlock Text="{Binding Hint, RelativeSource={RelativeSource AncestorType=UserControl}}" />
                 </AttachedProperties:PlaceholderService.Placeholder>
             </TextBox>
         </AdornerDecorator>
