--- a/src/AdminApp/Views/AddLoginToUserWindow.xaml
+++ b/src/AdminApp/Views/AddLoginToUserWindow.xaml
@@ -25,8 +25,8 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="35px" />
             </Grid.RowDefinitions>
-            <UserControls:DelayingTextInputControl Grid.Row="0" Margin="5" />
-            <ListView ItemsSource="{Binding UnknownLogins}" Grid.Row="1" Margin="5">
+            <UserControls:DelayingTextInputControl x:Name="DticEnterLogin" Grid.Row="0" Margin="5" Hint="Enter sub ID" Text="{Binding Text}" />
+            <ListView ItemsSource="{Binding SearchResults}" Grid.Row="1" Margin="5">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <WrapPanel>
@@ -37,7 +37,7 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button Content="Add new" Grid.Row="2" Margin="5"/>
+            <Button Content="{Binding ButtonText}" Grid.Row="2" Margin="5"/>
         </Grid>
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
