--- a/src/AdminApp/Views/AddLoginToUserWindow.xaml
+++ b/src/AdminApp/Views/AddLoginToUserWindow.xaml
@@ -25,7 +25,7 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="35px" />
             </Grid.RowDefinitions>
-            <UserControls:DelayingTextInputControl x:Name="DticEnterLogin" Grid.Row="0" Margin="5" Hint="Enter sub ID" Text="{Binding Text, Mode=TwoWay}" />
+            <UserControls:DelayingTextInputControl x:Name="DticEnterLogin" Grid.Row="0" Margin="5" Hint="{Binding Hint}" Text="{Binding Text, Mode=TwoWay}" />
             <ListView ItemsSource="{Binding SearchResults}" Grid.Row="1" Margin="5">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -37,7 +37,7 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button Content="{Binding ButtonText}" Grid.Row="2" Margin="5"/>
+            <Button Content="{Binding ButtonText}" Grid.Row="2" Margin="5" Command="{Binding AddOrCreateCommand}"/>
         </Grid>
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
