--- a/src/WPF.Shared/UserControls/DelayingTextInputControl.xaml
+++ b/src/WPF.Shared/UserControls/DelayingTextInputControl.xaml
@@ -13,7 +13,10 @@
             <TextBox x:Name="TbSearchText" Text="{Binding Text, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=UserControl}}" >
                 <AttachedProperties:PlaceholderService.Placeholder>
                     <!--<TextBlock Text="{Binding Hint, RelativeSource={RelativeSource AncestorType=UserControl,AncestorLevel=3}}" />-->
-                    <TextBlock Text="{Binding Hint, RelativeSource={RelativeSource AncestorType=UserControl}}" />
+                    <!--<TextBlock Text="{Binding Path=Hint, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:DelayingTextInputControl}}}" />-->
+                    <!--<TextBlock Text="{Binding Hint, RelativeSource={RelativeSource AncestorType={x:Type local:DelayingTextInputControl}}}" />-->
+                    <!--<TextBlock Text="Hint goes here" />-->
+                    <TextBlock Text="{Binding Hint, RelativeSource={RelativeSource AncestorType={x:Type local:DelayingTextInputControl}}}" />
                 </AttachedProperties:PlaceholderService.Placeholder>
             </TextBox>
         </AdornerDecorator>
