still experimenting with Bug #10...

--- a/src/WPF.Shared/UserControls/DelayingTextInputControl.xaml
+++ b/src/WPF.Shared/UserControls/DelayingTextInputControl.xaml
@@ -12,18 +12,7 @@
         <AdornerDecorator>
             <TextBox x:Name="TbSearchText" Text="{Binding Text, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=UserControl}}" >
                 <AttachedProperties:PlaceholderService.Placeholder>
-                    <TextBlock Text="{Binding Hint, RelativeSource={RelativeSource AncestorType={x:Type local:DelayingTextInputControl}}}" />
-                    <!--<TextBlock Text="{Binding Path=Hint, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:DelayingTextInputControl}}}" />-->
-                    <!--<TextBlock Text="{Binding Hint, RelativeSource={RelativeSource AncestorType={x:Type local:DelayingTextInputControl}}}" />-->
-                    <!--<TextBlock Text="Hint goes here" />-->
-                    <!--<TextBlock>
-                        <TextBlock.Style>
-                            <Style TargetType="TextBlock">
-                                --><!--<Setter Property="Text" Value="Hint goes here" />--><!--
-                                <Setter Property="Text" Value="{Binding Hint, RelativeSource={RelativeSource AncestorType={x:Type local:DelayingTextInputControl}}}" />
-                            </Style>
-                        </TextBlock.Style>
-                    </TextBlock>-->
+                    <TextBlock Text="{Binding Hint, RelativeSource={RelativeSource AncestorType=UserControl}}" />
                 </AttachedProperties:PlaceholderService.Placeholder>
             </TextBox>
         </AdornerDecorator>
