--- a/src/WPF.Shared/UserControls/DelayingTextInputControl.xaml
+++ b/src/WPF.Shared/UserControls/DelayingTextInputControl.xaml
@@ -9,13 +9,47 @@
              mc:Ignorable="d" 
              d:DesignHeight="25" d:DesignWidth="150">
     <Grid>
-        <AdornerDecorator>
+        <!--<AdornerDecorator>
             <TextBox x:Name="TbSearchText" Text="{Binding Text, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=UserControl}}" >
                 <AttachedProperties:PlaceholderService.Placeholder>
-                    <!--<TextBlock Text="{Binding Hint, RelativeSource={RelativeSource AncestorType={x:Type local:DelayingTextInputControl}}}" />-->
+                    --><!--<TextBlock Text="{Binding Hint, RelativeSource={RelativeSource AncestorType={x:Type local:DelayingTextInputControl}}}" />--><!--
                     <TextBlock Text="{Binding Hint, RelativeSource={RelativeSource Mode=Self}}" />
                 </AttachedProperties:PlaceholderService.Placeholder>
             </TextBox>
-        </AdornerDecorator>
+        </AdornerDecorator>-->
+        <TextBox x:Name="TbSearchText" Text="{Binding Text, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=UserControl}}" >
+            <TextBox.Style>
+                <Style BasedOn="{StaticResource {x:Type TextBox}}" TargetType="{x:Type TextBox}">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type TextBox}">
+                                    <Grid>
+                                        <ScrollViewer x:Name="PART_ContentHost"
+                                  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                                        <TextBlock x:Name="textBlock"
+                               Opacity="0.5"
+                               Text="Enter Text Here"
+                               TextWrapping="Wrap"
+                               Visibility="Hidden" />
+                                    </Grid>
+                                    <ControlTemplate.Triggers>
+                                        <MultiTrigger>
+                                            <MultiTrigger.Conditions>
+                                                <Condition Property="IsFocused"
+                                       Value="False" />
+                                                <Condition Property="Text"
+                                       Value="" />
+                                            </MultiTrigger.Conditions>
+                                            <Setter Property="Visibility"
+                                TargetName="textBlock"
+                                Value="Visible" />
+                                        </MultiTrigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+            </TextBox.Style>
+        </TextBox>
     </Grid>
 </local:BaseUserControl>
