--- a/src/WPF.Shared/UserControls/DelayingTextInputControl.xaml
+++ b/src/WPF.Shared/UserControls/DelayingTextInputControl.xaml
@@ -23,26 +23,18 @@
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType="{x:Type TextBox}">
+                                <Border BorderBrush="#FF7F9DB9" BorderThickness="1" Cursor="IBeam">
                                     <Grid>
-                                        <ScrollViewer x:Name="PART_ContentHost"
-                                  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                                        <TextBlock x:Name="textBlock"
-                               Opacity="0.5"
-                               Text="Enter Text Here"
-                               TextWrapping="Wrap"
-                               Visibility="Hidden" />
+                                        <ScrollViewer x:Name="PART_ContentHost" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                                        <TextBlock x:Name="textBlock" Opacity="0.5" Text="{Binding Hint, RelativeSource={RelativeSource AncestorType=UserControl}}" TextWrapping="Wrap" Visibility="Hidden" />
                                     </Grid>
-                                    <ControlTemplate.Triggers>
-                                        <MultiTrigger>
-                                            <MultiTrigger.Conditions>
-                                                <Condition Property="IsFocused"
-                                       Value="False" />
-                                                <Condition Property="Text"
-                                       Value="" />
+                                </Border>
+                                <ControlTemplate.Triggers>
+                                      <MultiTrigger>
+                                        <MultiTrigger.Conditions>
+                                            <Condition Property="Text" Value="" />
                                             </MultiTrigger.Conditions>
-                                            <Setter Property="Visibility"
-                                TargetName="textBlock"
-                                Value="Visible" />
+                                            <Setter Property="Visibility" TargetName="textBlock" Value="Visible" />
                                         </MultiTrigger>
                                     </ControlTemplate.Triggers>
                                 </ControlTemplate>
