--- a/src/WPF.Shared/UserControls/DelayingTextInputControl.xaml
+++ b/src/WPF.Shared/UserControls/DelayingTextInputControl.xaml
@@ -9,34 +9,33 @@
              mc:Ignorable="d" 
              d:DesignHeight="25" d:DesignWidth="150">
     <Grid>
-        <!--<AdornerDecorator>
-            <TextBox x:Name="TbSearchText" Text="{Binding Text, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=UserControl}}" >
-                <AttachedProperties:PlaceholderService.Placeholder>
-                    --><!--<TextBlock Text="{Binding Hint, RelativeSource={RelativeSource AncestorType={x:Type local:DelayingTextInputControl}}}" />--><!--
-                    <TextBlock Text="{Binding Hint, RelativeSource={RelativeSource Mode=Self}}" />
-                </AttachedProperties:PlaceholderService.Placeholder>
-            </TextBox>
-        </AdornerDecorator>-->
         <TextBox x:Name="TbSearchText" Text="{Binding Text, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=UserControl}}" >
             <TextBox.Style>
                 <Style BasedOn="{StaticResource {x:Type TextBox}}" TargetType="{x:Type TextBox}">
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType="{x:Type TextBox}">
-                                <Border BorderBrush="#FF7F9DB9" BorderThickness="1" Cursor="IBeam">
+                                <Border x:Name="txtBorder" BorderBrush="#FFABADB3" BorderThickness="1" Cursor="IBeam">
                                     <Grid>
                                         <ScrollViewer x:Name="PART_ContentHost" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
                                         <TextBlock x:Name="textBlock" Opacity="0.5" Text="{Binding Hint, RelativeSource={RelativeSource AncestorType=UserControl}}" TextWrapping="Wrap" Visibility="Hidden" />
                                     </Grid>
                                 </Border>
                                 <ControlTemplate.Triggers>
-                                      <MultiTrigger>
+                                    <MultiTrigger>
                                         <MultiTrigger.Conditions>
                                             <Condition Property="Text" Value="" />
-                                            </MultiTrigger.Conditions>
-                                            <Setter Property="Visibility" TargetName="textBlock" Value="Visible" />
-                                        </MultiTrigger>
-                                    </ControlTemplate.Triggers>
+                                        </MultiTrigger.Conditions>
+                                        <Setter Property="Visibility" TargetName="textBlock" Value="Visible" />
+                                    </MultiTrigger>
+                                    <MultiTrigger>
+                                        <MultiTrigger.Conditions>
+                                            <Condition Property ="IsMouseOver" Value="True" />
+                                            <Condition Property ="IsFocused" Value="True" />
+                                        </MultiTrigger.Conditions>
+                                        <Setter Property="BorderBrush" TargetName="txtBorder" Value="#FF569DE5"/>
+                                    </MultiTrigger>
+                                </ControlTemplate.Triggers>
                                 </ControlTemplate>
                             </Setter.Value>
                         </Setter>
